Phase 1: Offline Foundation - Service Worker, IndexedDB, and Connection Status

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png">
     
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#1a5632">
+    <meta name="theme-color" content="#22c55e">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
