Visual edit in OnSpace

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <!-- Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png">
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/4341/4341139.png">
   </head>
   <body>
     <!-- PWA Install Banner -->
@@ -40,7 +40,7 @@
       <div style="max-width: 1200px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between; gap: 16px;">
         <div style="flex: 1; min-width: 0;">
           <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 4px;">
-            <img src="https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png" alt="Martin Builder" style="height: 32px; width: auto;">
+            <img src="https://cdn-icons-png.flaticon.com/512/4341/4341139.png" alt="Martin Builder" style="height: 32px; width: auto;">
             <h3 style="margin: 0; font-size: 16px; font-weight: 700; color: white;">Install Martin Builder FieldTrack</h3>
           </div>
           <p style="margin: 0; font-size: 13px; opacity: 0.95; line-height: 1.4;">Install our app for offline access, faster loading, and a native app experience!</p>
