--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
     
-    <!-- Icons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <!-- Icons - PWA Only -->
     <link rel="apple-touch-icon" href="/martin-logo.png">
   </head>
   <body>
