Visual edit in OnSpace

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
     
-    <!-- PWA Manifest -->
+    <!-- PWA Manifest and Icons ONLY -->
     <link rel="manifest" href="/manifest.json">
-    
-    <!-- Icons - PWA Only -->
     <link rel="apple-touch-icon" href="/martin-logo.png">
   </head>
   <body>
