--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Martin Builder OS</title>
     
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" type="image/png" sizes="192x192" href="/martin-logo.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/martin-logo.png">
-    <link rel="shortcut icon" href="/martin-logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/martin-logo.png?v=2">
+    <link rel="icon" type="image/png" sizes="192x192" href="/martin-logo.png?v=2">
+    <link rel="icon" type="image/png" sizes="512x512" href="/martin-logo.png?v=2">
+    <link rel="shortcut icon" href="/martin-logo.png?v=2">
     <meta name="theme-color" content="#4179bc">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
